# factompile

./: aggregate_stats.py  telegram_bot.py
.github/workflows/: static.yml
backend/: compiler_service.py  config.py  main.py  pyproject.toml  requirements.txt  stats.py
frontend/: index.html  privacy.html
frontend/css/: style.css
frontend/js/: app.js  compiler.js  editor.js  theme.js
