[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "slowapi==0.1.9",
    "uvicorn[standard]==0.27.0",
    "factompile>=0.1.6",
    "telegram>=0.0.1",
    "aiohttp>=3.13.3",
]
